umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_propyl-chloride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "Cl#n3#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "Cl#n3#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]]}
    :success true}}
