umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_tetramethylammonium.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h3#v" "C#h3#v" "C#h3#v" "N#c+#v4"]
      :bonds [[0 4 :single] [1 4 :single] [2 4 :single] [3 4 :single]]
      :charge 1
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h3#v" "C#h3#v" "C#h3#v" "N#c+#v4"]
      :bonds [[0 4 :single] [1 4 :single] [2 4 :single] [3 4 :single]]
      :charge 1
      :spin "#u0#s1"}
    :success true}}
